Closed
Bug 969346
Opened 11 years ago
Closed 11 years ago
srcdoc iframe child of srcdoc iframe is not getting loaded
Categories
(Core :: Layout: Images, Video, and HTML Frames, defect)
Tracking
()
RESOLVED
FIXED
mozilla30
People
(Reporter: daniel, Assigned: jkitch)
Details
Attachments
(1 file, 2 obsolete files)
3.45 KB,
patch
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:26.0) Gecko/20100101 Firefox/26.0 (Beta/Release)
Build ID: 20131206152142
Steps to reproduce:
I generated some html programatically by converting nested iframes with src into nested iframes with srcdoc.
A simple ruby script to reproduce to bug:
require "cgi"
for i in 1..10
html = "#{i} #{html}"
html = "<iframe srcdoc='#{CGI.escapeHTML(html)}'></iframe>"
end
puts html
Actual results:
The toplevel iframe has content, but any embedded iframe (with srcdoc) is empty.
Expected results:
All iframes should have content, no matter how deep they are nested.
![]() |
||
Comment 1•11 years ago
|
||
Presumably we should skip the URI recursion checks when the iframe is loading a srcdoc.
James, do you have time to take a look?
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: needinfo?(jkitch.bug)
Summary: iframe with srcdoc may not contain iframe with srcdoc → srcdoc iframe child of srcdoc iframe is not getting loaded
Assignee | ||
Comment 2•11 years ago
|
||
This skips the recursion check for about:srcdoc URIs. Their need to be specified inline makes loops impossible without the aid of a src URI, which the code will still block.
Note that the maximum nested depth limit of about 10 is still enforced.
Assignee: nobody → jkitch.bug
Status: NEW → ASSIGNED
Attachment #8372745 -
Flags: review?(bzbarsky)
Flags: needinfo?(jkitch.bug)
Assignee | ||
Comment 3•11 years ago
|
||
comment typo
Attachment #8372745 -
Attachment is obsolete: true
Attachment #8372745 -
Flags: review?(bzbarsky)
Attachment #8372749 -
Flags: review?(bzbarsky)
![]() |
||
Comment 4•11 years ago
|
||
Comment on attachment 8372749 [details] [diff] [review]
Allow nesting
Could we check the scheme for "about" before doing the GetSpec? Otherwise for data: URIs we'll end up copying a huge string for no particularly good reason...
>+ pframe.contentWindow.addEventListener("load", function () {
Just use addLoadEvent(); if the toplevel onload is firing the frames will be ready too.
r=me with those changes
Attachment #8372749 -
Flags: review?(bzbarsky) → review+
Assignee | ||
Comment 5•11 years ago
|
||
Attachment #8372749 -
Attachment is obsolete: true
Assignee | ||
Updated•11 years ago
|
Keywords: checkin-needed
Comment 6•11 years ago
|
||
Flags: in-testsuite+
Keywords: checkin-needed
Comment 7•11 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
Updated•7 years ago
|
Product: Core → Core Graveyard
Updated•7 years ago
|
Component: Layout: HTML Frames → Layout: Images
Product: Core Graveyard → Core
You need to log in
before you can comment on or make changes to this bug.
Description
•