Bug 969346 - Allow nesting of srcdoc iframes. r=bz